fixing about section alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,3 +37,7 @@
 .byline {
     font-family: serif;
 }
+
+.bio-section{
+    
+}
